--- a/public/css/sb-admin.css
+++ b/public/css/sb-admin.css
@@ -122,7 +122,7 @@ ul.alert-dropdown {
         border: none;
         border-radius: 0;
         overflow-y: auto;
-        background-color: #222;
+        background-color: #24344B;
         bottom: 0;
         overflow-x: hidden;
         padding-bottom: 40px;
@@ -171,7 +171,24 @@ ul.alert-dropdown {
 .huge {
     font-size: 40px;
 }
+.huge1{
+  font-size: 27px;
+}
 
+
+.panel-ready {
+    border-color: #4C4C4C;
+}
+
+.panel-ready > .panel-heading {
+    border-color: #4C4C4C;
+
+    background-color: #fff
+}
+
+.panel-ready > a {
+
+}
 .panel-green {
     border-color: #5cb85c;
 }
