--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -141,7 +141,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand">KongTech</a>
+                <a class="navbar-brand"><img src="./kongtech-logo.png" width="80px"</img></a>
             </div>
             <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
