--- a/views/partials/body/dashboard.ejs
+++ b/views/partials/body/dashboard.ejs
@@ -318,7 +318,7 @@
 
         <script src="/socket.io/socket.io.js"></script>
         <script>
-        var socket = io.connect("http://localhost:3000");
+        var socket = io.connect("http://52.79.197.118:80");
         var check_icon = $("#test3 i");
         var check_color = $("#test5");
         var check_text = $("#test6");
